--- a/cumorah/package.json
+++ b/cumorah/package.json
@@ -13,15 +13,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^15.0.0",
-    "@angular/core": "^15.0.0",
+    "@angular/animations": "^15.2.8",
+    "@angular/common": "^15.2.8",
+    "@angular/core": "^15.2.8",
     "@angular/forms": "^15.0.0",
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
-    "@angular/router": "^15.0.0",
-    "@capacitor/android": "4.8.0",
+    "@angular/router": "^15.2.8",
+    "@capacitor/android": "^5.2.2",
     "@capacitor/app": "4.1.1",
-    "@capacitor/core": "^4.8.0",
+    "@capacitor/core": "^5.2.2",
     "@capacitor/haptics": "4.1.0",
     "@capacitor/keyboard": "4.1.1",
     "@capacitor/status-bar": "4.1.1",
@@ -33,13 +34,13 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.0.0",
+    "@angular-devkit/build-angular": "^15.2.8",
     "@angular-eslint/builder": "^15.0.0",
     "@angular-eslint/eslint-plugin": "^15.0.0",
     "@angular-eslint/eslint-plugin-template": "^15.0.0",
     "@angular-eslint/schematics": "^15.0.0",
     "@angular-eslint/template-parser": "^15.0.0",
-    "@angular/cli": "^15.0.0",
+    "@angular/cli": "^15.2.8",
     "@angular/compiler": "^15.0.0",
     "@angular/compiler-cli": "^15.0.0",
     "@angular/language-service": "^15.0.0",
